--- a/Experiments/Ruby/rails-projects/feature-dash/app/assets/stylesheets/toggle.css
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/assets/stylesheets/toggle.css
@@ -6,7 +6,7 @@
   display: block;
   width: 60px;
   height: 30px;
-  margin: 2px 0;
+  margin: 1px 0;
   position: relative;
 }
 
@@ -17,7 +17,7 @@
   left: 0;
   right: 0;
   border-radius: 30px;
-  box-shadow: 0 0 0 2px var(--gray-50), 0 0 4px var(--gray-50);
+  box-shadow: 0 0 0 1px var(--dark-30-border), 0 0 4px var(--dark-30-border);
   cursor: pointer;
   border: 4px solid transparent;
   overflow: hidden;
@@ -29,7 +29,7 @@
   content: "";
   width: 100%;
   height: 100%;
-  background-color: var(--gray-50);
+  background-color: var(--dark-30-border);
   border-radius: 30px;
   transform: translateX(-30px);
   transition: 0.2s;
@@ -37,9 +37,9 @@
 
 input:checked + .slider:before {
   transform: translateX(30px);
-  background-color: limeGreen;
+  background-color: var(--primary-100);
 }
 
 input:checked + .slider {
-  box-shadow: 0 0 0 2px limeGreen, 0 0 8px limeGreen;
+  box-shadow: 0 0 0 1px var(--primary-100), 0 0 8px var(--primary-100);
 }
