--- a/Experiments/Ruby/rails-projects/feature-dash/app/assets/stylesheets/toggle.css
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/assets/stylesheets/toggle.css
@@ -17,6 +17,7 @@
   left: 0;
   right: 0;
   border-radius: 30px;
+  background-color: var(--dark-18);
   box-shadow: 0 0 0 1px var(--dark-30-border), 0 0 4px var(--dark-30-border);
   cursor: pointer;
   border: 4px solid transparent;
@@ -35,9 +36,13 @@
   transition: 0.2s;
 }
 
+input:checked + .slider {
+  background-color: var(--primary-100);
+}
+
 input:checked + .slider:before {
   transform: translateX(30px);
-  background-color: var(--primary-100);
+  background-color: white;
 }
 
 input:checked + .slider {
