--- a/Experiments/Ruby/rails-projects/feature-dash/app/views/features/edit.html.erb
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/views/features/edit.html.erb
@@ -41,7 +41,7 @@
       <% end %>
     <% end %>
 
-    <div class="form_button_row">
+    <div class="button_row">
       <%= link_to("Cancel", "/features", class: "button button_secondary") %>
       <%= feature_field.submit("Save", class: "button button_primary") %>
     </div>
