--- a/Experiments/Ruby/rails-projects/feature-dash/app/assets/stylesheets/feature-tile.css
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/assets/stylesheets/feature-tile.css
@@ -1,27 +1,56 @@
-.feature-tile {
+.feature_tile {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  position: relative;
   color: inherit;
   text-decoration: none;
-  border: 1px solid var(--dark-30-border);
-  /* background-color: var(--dark-18); */
-  box-shadow: 0 6px 12px -4px rgba(0, 0, 0, 0.4);
+  border: 1px solid var(--dark-18);
+  background-color: var(--dark-18);
+  box-shadow: 0 6px 8px -2px rgba(0, 0, 0, 0.25);
   border-radius: 16px;
-  padding: 16px;
+  padding: 18px;
   transition: 100ms ease-in-out;
+  user-select: none;
 }
 
-.feature-tile:active {
+.feature_tile:active {
   transform: scale(0.99);
 }
 
-.feature-tile:focus-visible {
+.feature_tile:focus-visible {
   outline: none;
   border-color: var(--primary-100);
   box-shadow: 0 0 0 var(--selection-outline-width) var(--primary-30);
 }
 
-.description {
-  margin-top: 4px;
+.feature_enabled_light {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  width: 12px;
+  height: 12px;
+  border-radius: 99px;
+  background-image: radial-gradient(circle, hsl(206, 34%, 28%), hsl(210, 30%, 22%), hsl(208, 100%, 17%));
+  box-shadow: 0 0 0 1px var(--dark-12-bg), 0 0 0 5px hsla(222, 15%, 0%, 0.1);
+}
+
+.feature_enabled_light.active {
+  background-image: radial-gradient(circle, hsl(204, 100%, 99%), hsl(204, 100%, 84%), hsl(208, 89%, 52%));
+  box-shadow: 0 0 0 1px hsl(206, 100%, 26%), 0 0 0 4px hsla(206, 100%, 50%, 0.08), 0 0 4px hsl(214, 100%, 50%), 0 0 10px var(--primary-100), 0 0 20px var(--primary-100), 0 0 30px var(--primary-100);
+}
+
+.feature_name {
+  color: var(--text-100);
+  padding-right: 30px;
+}
+
+.tile_details {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  padding: 16px 20px;
+  margin-top: 10px;
+  border: 1px solid var(--dark-30-border);
+  border-radius: var(--radius-elements);
 }
