--- a/Experiments/Ruby/rails-projects/feature-dash/app/views/features/index.html.erb
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/views/features/index.html.erb
@@ -4,7 +4,7 @@
   </header>
 
   <%= form_tag(features_path, :method => "get", :class => "search_form") do %>
-    <%= text_field_tag :search, params[:search], :placeholder => "Search", :class => "search_field" %>
+    <%= text_field_tag :search, params[:search], :placeholder => "Search", :class => "search_field", :autofocus => true %>
     <%= submit_tag "⇨", :name => nil, :class => "button button_primary search_button" %>
   <% end %>
 
