--- a/Experiments/Ruby/rails-projects/feature-dash/app/assets/stylesheets/form.css
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/assets/stylesheets/form.css
@@ -4,10 +4,27 @@ form {
   gap: 34px;
 }
 
+.form_top_row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
 .form_field {
+  flex: 1;
   display: flex;
   flex-direction: column;
   gap: 6px;
+}
+
+.form_field.switch_field {
+  flex: 0;
+}
+
+.switch_container {
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 input[type=text],
@@ -37,11 +54,6 @@ textarea {
 
 ::placeholder {
   color: var(--text-55);
-}
-
-.switch_container {
-  border-top: 1px solid var(--dark-30-border);
-  padding-top: 16px;
 }
 
 .button_row {
@@ -92,10 +104,11 @@ textarea {
 }
 
 .search_field {
-  flex: 10;
+  flex: 1;
 }
 
 .search_button {
+  flex: 0;
   padding: 0;
-  min-width: 50px;
+  min-width: 52px;
 }
