--- a/Experiments/Ruby/rails-projects/feature-dash/app/views/layouts/application.html.erb
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400&family=IBM+Plex+Sans:wght@200;300;400&display=swap" rel="stylesheet">
     <%= javascript_importmap_tags %>
   </head>
 
