--- a/Experiments/Ruby/rails-projects/feature-dash/app/views/features/index.html.erb
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/views/features/index.html.erb
@@ -4,8 +4,10 @@
   </header>
 
   <%= form_tag(features_path, :method => "get", :class => "search_form") do %>
-    <%= text_field_tag :search, params[:search], :placeholder => "Search", :class => "search_field", :autofocus => true %>
-    <%= submit_tag "⇨", :name => nil, :class => "button button_primary search_button" %>
+    <%= text_field_tag :search, params[:search], :placeholder => "Search", :class => "search_field", :autofocus => true, :autocomplete => "off" %>
+    <%= button_tag(type: 'submit', class: 'button button_primary search_button') do %>
+      <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"/></svg>
+    <% end %>
   <% end %>
 
   <%# <%= link_to("Add New Feature", new_feature_path, class: 'action new') %>
