--- a/Experiments/Ruby/rails-projects/feature-dash/app/views/layouts/application.html.erb
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 
   <body>
     <div class="root_caret"></div>
+    <span class="title_tag">Root Experiences</span>
     <%= yield %>
   </body>
 </html>
