--- a/Experiments/Ruby/rails-projects/feature-dash/app/views/features/index.html.erb
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/views/features/index.html.erb
@@ -19,7 +19,7 @@
       <% end %>
       <h4 class="feature_name"><%= feature.name %></h4>
       <% if feature.description %>
-        <p><%= feature.description %></p>
+        <p class="feature_description"><%= feature.description %></p>
       <% end %>
       <div class="tile_details">
         <% if feature.enabled %>
